--- a/styles_index.css
+++ b/styles_index.css
@@ -1,5 +1,3 @@
-
-
 main #products-container {
     height: 100%;
     display: flex;
@@ -18,7 +16,13 @@ main #products-container {
     align-items: center;
     background-color: #007192;
     border: 2px solid black;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 25px;
+}
+
+.product-card:hover {
+    translate: 0 -10px;
+    box-shadow: 0px 10px 6px rgba(0, 0, 0, 0.5);
 }
 
 .product-card img {
